--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,8 +9,11 @@
 <ion-content>
   <ion-item>
     <ion-label>Senha:</ion-label>
-    <ion-input [(ngModel)]="senha" (keyup)="verificar()"></ion-input>
+    <ion-input  [(ngModel)]="senha" (keyup)="verificar()"></ion-input>
   </ion-item>
+
+
+  <div class="barra-{{nivel}}"></div>
 
   <h1>Sua senha é {{forca[nivel]}}</h1>
   <img src="../../assets/{{nivel}}.png" alt="">
