--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,34 @@
-#container {
-  text-align: center;
+.barra-0{
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  width: 0%;  
+  height:10px;
+  
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.barra-1{
+  width: 25%;
+  background-color: red;
+  height:10px;
+  
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.barra-2{
+width: 50%;
+background-color: yellow;
+height:10px;
+  
 }
 
-#container a {
-  text-decoration: none;
+.barra-3{
+  width: 75%;
+  background-color: rgb(87, 230, 122);
+  height:10px;
+  
+} 
+
+.barra-4{
+width: 100%;
+background-color: green;
+height:10px;
+  
 }
